samples/_failures_safe/1761005470_71b40b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fb2ef717.c: In function ‘main’:
./samples/SAFE/__tmp_fb2ef717.c:134:5: error: expected declaration or statement at end of input
  134 |     return 0;
      |     ^~~~~~
